attempted to fix nav text on mobile 3

--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -64,7 +64,6 @@
         text-align:center;
         padding-bottom: 5px;
         text-wrap:wrap;
-        word-break: break-all;
         overflow-wrap:break-word;
     }
 
